fix bug password

--- a/src/app/components/admin-administration/users/users.component.html
+++ b/src/app/components/admin-administration/users/users.component.html
@@ -52,7 +52,7 @@
 
         <div class="row">
           <div class="col-sm-6">
-            <app-password-field [id]="'password'" [passwordControl]="getFormControl('password')" [submitted]="submitted"></app-password-field>
+            <app-password-field [id]="'password'" [passwordControl]="getFormControl('password')"></app-password-field>
           </div>
 
           <div class="col-sm-6">
@@ -71,7 +71,7 @@
         <!-- address -->
         <div class="row mt-2">
           <div class="col-sm-6">
-            <app-street-field [id]="'deliveryStreet'" [streetControl]="getFormControl('deliveryStreet')" [submitted]="submitted"></app-street-field>
+            <app-street-field [id]="'deliveryStreet'" [streetControl]="getFormControl('deliveryStreet')"></app-street-field>
           </div>
 
           <div class="col-sm-6">
