--- a/src/app/form/password-field/password-field.component.html
+++ b/src/app/form/password-field/password-field.component.html
@@ -1,7 +1,7 @@
 <div class="mb-4 form-group">
   <label class="form-label" [for]="id">Mot de passe<span class="text-danger">* </span> <i class="bi-info-circle text-primary size-bi" data-bs-toggle="modal" data-bs-target="#userPassword"></i></label>
   <div class="input-group-merge">
-    <input [formControl]="passwordControl" [ngClass]="{'is-invalid':submitted && passwordControl.invalid}" type="password" class="js-toggle-password form-control form-control-lg" name="password" [id]="id" placeholder="Mot de passe fort" aria-label="Mot de passe fort." required minlength="8"
+    <input [formControl]="passwordControl" [ngClass]="{'is-invalid':submitted && passwordControl.invalid}" type="password" class="js-toggle-password form-control form-control-lg" name="password" [id]="id" placeholder="Mot de passe fort" aria-label="Mot de passe fort."
            data-hs-toggle-password-options='{
              "target": [".js-toggle-password-target-1", ".js-toggle-password-target-2"],
              "defaultClass": "bi-eye-slash",
