--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -86,7 +86,7 @@
                     <tbody>
                       <tr>
                         <td>Frais de livraison</td>
-                        <td class="text-end">offert</td>
+                        <td class="text-end">Offert</td>
                       </tr>
                       <tr>
                         <td>Montant HT</td>
