--- a/src/app/components/payment-page/payment-page.component.html
+++ b/src/app/components/payment-page/payment-page.component.html
@@ -9,7 +9,7 @@
         <div class="card-body">
           <div class="d-flex justify-content-between align-items-center">
             <p><strong>Frais de livraison :</strong></p>
-            <p>offert</p>
+            <p>Offert</p>
           </div>
           <div class="d-flex justify-content-between align-items-center">
             <p><strong>Montant HT :</strong></p>
